# SKYvideoplayer

./: CMakeLists.txt  README.md  main.cpp
qml/: Main.qml
src/core/: AVSyncController.cpp  AVSyncController.h  AudioOutput.cpp  AudioOutput.h  MediaEngine.cpp  MediaEngine.h  VideoRenderItem.cpp  VideoRenderItem.h
